2006-11-22  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* instance.c, objectpath.c, value.c: 
	Fixed 1600707: added more checks for null strings (and other encapsulated
	datatypes)

	* objectpath.c: 
	Fixed 1601005: added missing function setHostAndNameSpaceFromObjectPath.

2006-11-21  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* providerDrv.c, providerMgr.c, configure.ac, README: 
	Fixed 1193881: added new configuration option to specify the enumeration
	behavior. In both cases, the correct number of instances is returned now.

2006-11-21  Sven Schuetz
	* sfcbrepos.sh.in, Makefile.am, interop.mof, indication.mof, README
	Fixed 1599697: sfcbrepos include default mofs

2006-11-17  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* sfcBroker.c: 
	Fixed 1598227: Use the SIGQUIT handler for SIGTERM as well in order to
	clean up the child processes.

2006-11-09  Sven Schuetz
	* cimXmlGen.c, cimXmlRequest.c, objectImpl.c:
	Fixed 1593220: bug in setQualifier

2006-11-08  Sven Schuetz
	* cimXmlOps.y, cimXmlParser.c:
	Fixed 1592760: sfcb PROPERTY.ARRAY creation fails

2006-11-07  Sven Schuetz
	* objectImpl.h, objectImplSwapI32toP32.c, instance.c,
	qualifier.c:
	Fixed 1587752: objectImplSwapI32toP32.c needs to be extended
	
	* objectImpl.c:
	Fixed 1592037: objectImpl Array creation
	

2006-10-27  Sven Schuetz

	* Makefile.am, sfcbrepos.sh.in, fileRepository.h, fileRepository.c, 
	internalProvider.c,
	Fixed 1578815: create fileRepository shared library

2006-10-25  Viktor Mihajlovski  <mihajlov@dyn-9-152-143-50.boeblingen.de.ibm.com>

	* Makefile.am, classSchema2c.c, classProviderMem.c, classSchemaMem.c,
	classSchemaMem.h: 
	Fixed 1532425: Reenabled classSchema2c and went all the way and added
	an in-memory class provider.

2006-10-20  Viktor Mihajlovski  <mihajlov@localhost.localdomain>

	* dbpAdapter.c, sqlStatement.c: 
	Fixed 1581214: compile problems.

	* cimXmlRequest.c, constClass.c: 